# schneider_chatbot

./: 1.2Q&A with RAG-Chains-with-memory_dynamic-sessionid(Streaming)--REDIS_RETRY.ipynb  1.2Q&A with RAG-Chains-with-memory_dynamic-sessionid(Streaming).ipynb  1.2Q&A with RAG-Chains-with-memory_dynamic-sessionid(Streaming)_vertex.ipynb  app.py  auth_config.yaml  chatbotbasic.py  hashed.ipynb  pyproject.toml
configs/: config.py  logging_config.py
schneider_chatbot/chatbot/: chains.py  langsmith.py  llama_retriever.py  llm_initialization.py  prompts.py  session_management.py  vector_store.py
